test prevent scrolling on iOS

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body, html {
+html, body {
   font-family: Helvetica, sans-serif;
   background-color: hsl(302, 10%, 99%);
   height: 100%; /* prevent scrolling */
@@ -8,7 +8,7 @@ body, html {
 main {
   width: 100vw;
   height: 100%; /* prevent scrolling */
-  overflow: hidden; /* prevent scrolling */
+  overflow: auto; /* prevent scrolling */
 }
 
 button {
